--- a/settings.html
+++ b/settings.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 <body>
     <div class="content">
-        <h1>Welcome to the Home Page</h1>
-        <p>This is the home page content. Click the navigation items to move to different sections.</p>
+        <h1>Your Settings</h1>
+        <p>This is the Settings page content.</p>
     </div>
 
     <!-- Bottom Navigation Bar -->
     <div class="bottom-nav">
-        <a href="home.html" class="nav-item active">
+        <a href="home.html" class="nav-item">
             <span class="icon">🏠</span>
             <span class="text">Home</span>
         </a>
-        <a href="profile.html" class="nav-item">
+        <a href="profile.html" class="nav-item active">
             <span class="icon">👤</span>
             <span class="text">Profile</span>
         </a>
